--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,7 @@
             "args": [
                 "-g",
                 "*.cpp",
+                "algorithms/*.cpp",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe",
                 "-IC:\\lib\\SFML-2.5.1\\include",
